--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"@svelteuidev/composables": "^0.7.0",
-		"@svelteuidev/core": "^0.7.0"
+		"@svelteuidev/core": "^0.7.0",
+		"material-icons": "^1.11.5"
 	}
 }
